--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <com.example.jenny.myview.WaveView
-        android:id="@+id/wave_view"
+    <!--<com.example.jenny.myview.WaveView-->
+        <!--android:id="@+id/wave_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/scale"
+            android:layout_weight="1"
+            android:text="Scale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/rotate"
+            android:layout_weight="1"
+            android:text="Rotate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/translate"
+            android:layout_weight="1"
+            android:text="Translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/alpha"
+            android:layout_weight="1"
+            android:text="Alpha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <ImageView
+        android:layout_marginTop="150dp"
+        android:layout_gravity="center"
+        android:id="@+id/anim_target"
+        android:src="@drawable/dog"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
 
     <!--<Button-->
         <!--android:id="@+id/animView"-->
