--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,42 +10,48 @@
         <!--android:id="@+id/wave_view"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent" />-->
-    <LinearLayout
-        android:orientation="horizontal"
+    <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<Button-->
+            <!--android:id="@+id/scale"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Scale"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--<Button-->
+            <!--android:id="@+id/rotate"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Rotate"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--<Button-->
+            <!--android:id="@+id/translate"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Translate"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--<Button-->
+            <!--android:id="@+id/alpha"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Alpha"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+    <!--</LinearLayout>-->
+    <Button
+        android:id="@+id/combinedAnim"
+        android:text="开始组合动画"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/scale"
-            android:layout_weight="1"
-            android:text="Scale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/rotate"
-            android:layout_weight="1"
-            android:text="Rotate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/translate"
-            android:layout_weight="1"
-            android:text="Translate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/alpha"
-            android:layout_weight="1"
-            android:text="Alpha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:layout_height="wrap_content" />
     <ImageView
         android:layout_marginTop="150dp"
-        android:layout_gravity="center"
+        android:layout_marginStart="80dp"
+        android:layout_gravity="center_vertical"
         android:id="@+id/anim_target"
         android:src="@drawable/dog"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
     <!--<Button-->
         <!--android:id="@+id/animView"-->
